# sandbox-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.agents/plugins/: marketplace.json
.agents/skills/modal-sandbox-cli-workflows/: SKILL.md
.agents/skills/modal-sandbox-package-maintenance/: SKILL.md
.agents/skills/modal-sandbox-repo-understanding/: SKILL.md
.agents/skills/modal-sandbox-understanding-check/: SKILL.md
.codex/: README.md  config.toml
.codex/skills/modal-sandbox-cli-contract/: SKILL.md
.codex/skills/modal-sandbox-cli-workflows/: SKILL.md
.codex/skills/modal-sandbox-docs-maintenance/: SKILL.md
.codex/skills/modal-sandbox-first-run/: SKILL.md
.codex/skills/modal-sandbox-python-sdk/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  testpypi.yml  tests.yml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  agents.md  cli.md  development.md
docs/design-docs/: cognitive-load.md  core-beliefs.md  index.md  vercel-style-sdk-compatibility.md
docs/exec-plans/: PLAN_TEMPLATE.md  index.md  tech-debt-tracker.md
docs/exec-plans/active/: README.md
docs/exec-plans/active/assessment-remediation/: PLAN_assessment-remediation.md
docs/exec-plans/active/modal-native-sandbox-expansion/: PLAN_modal-native-sandbox-expansion.md
docs/exec-plans/completed/: README.md
docs/product-specs/: cli-golden-workflows.md  index.md  modal-native-filesystem-and-source.md  sandbox-domain-allowlist.md  vercel-style-conveniences.md  volume-backed-snapshots.md
docs/references/: agents.md  cli.md  collaborator-onboarding.md  development.md  index.md  modal-setup.md  modal-skills.md  new-agent-prompt.md
examples/: agent_loop.py  argv_command.py  cli_file_workflow.sh  node_dev_server.py  openai_agent_loop.py  persistent_volume.sh  reuse_sandbox.py  run_python.py  volume_mounts.py
modal_agent_sandbox/: __init__.py  agent_loop.py  agents_tools.py  cli.py  provider_modal.py  sandbox.py  types.py
plugins/modal-sandbox/.codex-plugin/: plugin.json
scripts/dev/: check.sh  live-smoke.sh  quickstart.sh  release-check.sh  schema.sh  update-plugin-cachebuster.py
scripts/execplan/: check.sh  validate-state.mjs
skills/modal-sandbox-cli-contract/: SKILL.md
skills/modal-sandbox-cli-workflows/: SKILL.md
skills/modal-sandbox-docs-maintenance/: SKILL.md
skills/modal-sandbox-file-workflows/: SKILL.md
skills/modal-sandbox-first-run/: SKILL.md
skills/modal-sandbox-live-tests/: SKILL.md
skills/modal-sandbox-provider-adapter/: SKILL.md
tests/: test_agent_loop.py  test_cli.py  test_modal_live.py  test_packaging.py  test_provider_modal.py  test_sandbox.py
(+40 files in other folders)
