[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modal-agent-sandbox"
version = "0.1.0"
description = "A lightweight OpenAI Agents SDK-compatible sandbox harness backed by Modal Sandboxes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.1.0",
    "openai-agents>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sandbox-harness = "modal_agent_sandbox.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
