[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modal-sandbox-sdk"
version = "0.1.0"
description = "A lightweight Python SDK and CLI for Modal Sandboxes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sandbox = "sandbox_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/sandbox",
    "packages/sandbox_cli",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]
