[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modal-sandbox-sdk"
version = "0.2.0"
description = "A lightweight Python SDK and CLI for Modal Sandboxes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DaleGrinter1", email = "dalegrinter1@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "modal>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/DaleGrinter1/sandbox-harness"
Repository = "https://github.com/DaleGrinter1/sandbox-harness"
Issues = "https://github.com/DaleGrinter1/sandbox-harness/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.0",
    "ruff>=0.14.0",
]

[project.scripts]
sandbox = "sandbox_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/sandbox",
    "packages/sandbox_cli",
]

[tool.hatch.build.targets.wheel.force-include]
"packages/sandbox/py.typed" = "sandbox/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
include = ["packages", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
